# launcher

./: CMakeLists.txt
debian/: control
src/: launcher.cpp  main.cpp
